fixed overlay & primaryLayout on mobile mode

--- a/src/components/Layout/Overlay/index.less
+++ b/src/components/Layout/Overlay/index.less
@@ -59,6 +59,10 @@
     }
   }
 
+  &.undocked {
+    display: none;
+  }
+  
   &.expand{
     max-width: calc(100% + 150px);
   }
