--- a/src/layouts/PrimaryLayout.less
+++ b/src/layouts/PrimaryLayout.less
@@ -10,7 +10,8 @@
   // overflow-y: overlay;
 
   width: auto;
-  height: 98%;
+  height: 100%;
+  padding: 15px 0;
   align-self: baseline;
 
   position: relative;
